--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.1",
     "redux": "^4.0.1",
+    "redux-persist": "^5.10.0",
     "sequelize": "^4.38.0",
     "sequelize-cli": "^5.4.0",
     "styled-components": "^4.1.2",
