--- a/.babelrc
+++ b/.babelrc
@@ -5,6 +5,12 @@
     ],
     plugins: [
       "@babel/plugin-proposal-class-properties",
-      "@babel/plugin-proposal-object-rest-spread"
+      "@babel/plugin-proposal-object-rest-spread",
+      ["module-resolver", {
+        "ROOT": "./src/server",
+        "alias": {
+          "UTILS": "./src/utils"
+        }
+      }]
     ]
 }
