--- a/package.json
+++ b/package.json
@@ -6,9 +6,7 @@
   "author": "saraband <super_yass@hotmail.com>",
   "license": "MIT",
   "scripts": {
-    "windows-server": "babel-node",
-    "server": "nodemon --ignore \"src/browser/*\" --exec yarn windows-server -- ./src/server/index.js",
-    "test": "nodemon --ignore \"src/browser/*\" --exec yarn windows-server -- ./src/server/test.js",
+    "server": "nodemon --config nodemon.json ./src/server/index.js",
     "webpack": "webpack-dev-server --watch"
   },
   "dependencies": {
@@ -20,6 +18,7 @@
     "@babel/preset-react": "^7.0.0",
     "apollo-boost": "^0.1.13",
     "babel-loader": "^8.0.4",
+    "babel-plugin-module-resolver": "^3.1.1",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-polyfill": "^6.26.0",
     "babel-preset-env": "^1.7.0",
