--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "faker": "^4.1.0",
     "graphql": "^14.0.2",
     "graphql-tag": "^2.9.2",
+    "graphql-tools": "^4.0.3",
     "lodash": "^4.17.10",
     "moment": "^2.22.2",
     "morgan": "^1.9.0",
