--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@babel/node": "^7.0.0",
     "@babel/plugin-proposal-class-properties": "^7.1.0",
     "@babel/plugin-proposal-object-rest-spread": "^7.0.0",
+    "@babel/plugin-transform-async-to-generator": "^7.2.0",
+    "@babel/plugin-transform-regenerator": "^7.0.0",
     "@babel/preset-react": "^7.0.0",
     "apollo-boost": "^0.1.13",
     "babel-loader": "^8.0.4",
