--- a/.babelrc
+++ b/.babelrc
@@ -9,7 +9,9 @@
       ["module-resolver", {
         "ROOT": "./src/server",
         "alias": {
-          "UTILS": "./src/utils"
+          "SERVER": "./src/server",
+          "UTILS": "./src/utils",
+          "DIST": "./dist"
         }
       }]
     ]
