--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "babel-preset-stage-2": "^6.24.1",
     "body-parser": "^1.18.3",
     "chalk": "^2.4.1",
+    "cli-progress": "^2.1.1",
     "cors": "^2.8.4",
     "express": "^4.16.3",
     "express-graphql": "^0.7.1",
