--- a/package.json
+++ b/package.json
@@ -42,7 +42,6 @@
     "graphql-tag": "^2.9.2",
     "graphql-tools": "^4.0.3",
     "graphql-type-json": "^0.2.1",
-    "jimp": "^0.6.0",
     "lodash": "^4.17.10",
     "moment": "^2.22.2",
     "morgan": "^1.9.0",
@@ -60,6 +59,7 @@
     "redux-persist": "^5.10.0",
     "sequelize": "^4.38.0",
     "sequelize-cli": "^5.4.0",
+    "sharp": "^0.21.1",
     "styled-components": "^4.1.2",
     "webpack": "^4.16.5",
     "webpack-cli": "^3.1.0",
