--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,9 @@
 node_modules
 .idea
 yarn.lock
-dist/app.bundle.js
-dist/app.bundle.js.map
+dist/*.bundle.*
 dist/images
+dist/index.html
 src/server/config.json
 specs.rtf
 package-lock.json
