--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "babel-preset-stage-2": "^6.24.1",
     "body-parser": "^1.18.3",
     "chalk": "^2.4.1",
+    "clean-webpack-plugin": "^1.0.0",
     "cli-progress": "^2.1.1",
     "cors": "^2.8.4",
     "express": "^4.16.3",
@@ -44,6 +45,7 @@
     "graphql-tag": "^2.9.2",
     "graphql-tools": "^4.0.3",
     "graphql-type-json": "^0.2.1",
+    "html-webpack-plugin": "^3.2.0",
     "lodash": "^4.17.10",
     "moment": "^2.22.2",
     "morgan": "^1.9.0",
