--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "graphql-tag": "^2.9.2",
     "graphql-tools": "^4.0.3",
     "graphql-type-json": "^0.2.1",
+    "html-webpack-harddisk-plugin": "^1.0.1",
     "html-webpack-plugin": "^3.2.0",
     "lodash": "^4.17.10",
     "moment": "^2.22.2",
@@ -68,6 +69,7 @@
     "webpack": "^4.16.5",
     "webpack-cli": "^3.1.0",
     "webpack-dev-server": "^3.1.5",
-    "webpack-merge": "^4.1.5"
+    "webpack-merge": "^4.1.5",
+    "webpack-subresource-integrity": "^1.3.1"
   }
 }
