--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "@babel/plugin-transform-async-to-generator": "^7.2.0",
     "@babel/plugin-transform-regenerator": "^7.0.0",
     "@babel/preset-react": "^7.0.0",
+    "@material-ui/core": "^3.6.2",
+    "@material-ui/icons": "^3.0.1",
     "apollo-boost": "^0.1.13",
     "babel-loader": "^8.0.4",
     "babel-plugin-module-resolver": "^3.1.1",
