--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "html-webpack-harddisk-plugin": "^1.0.1",
     "html-webpack-plugin": "^3.2.0",
     "lodash": "^4.17.10",
+    "makecancelable": "^1.0.0",
     "moment": "^2.22.2",
     "morgan": "^1.9.0",
     "nodemon": "^1.18.4",
