--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "license": "MIT",
   "scripts": {
     "server": "nodemon --config nodemon.json ./src/server/index.js",
-    "test": "babel-node ./src/server/test.js",
+    "test": "babel-node ./src/server/schemas/index.js",
     "generate-images": "babel-node ./src/server/data/generate-images.js",
     "update-thumbnails": "babel-node ./src/server/data/update-thumbnails.js",
     "client": "webpack-dev-server --watch --config ./webpack.dev.js",
@@ -41,6 +41,7 @@
     "clean-webpack-plugin": "^1.0.0",
     "cli-progress": "^2.1.1",
     "cors": "^2.8.4",
+    "diacritics": "^1.3.0",
     "express": "^4.16.3",
     "express-graphql": "^0.7.1",
     "faker": "^4.1.0",
