Moved the setup scripts in a dedicated folder, re-arranged the assets structure so it is included in the repo

--- a/package.json
+++ b/package.json
@@ -8,8 +8,9 @@
   "scripts": {
     "server": "nodemon --config nodemon.json ./src/server/index.js",
     "test": "babel-node ./src/server/schemas/index.js",
-    "generate-images": "babel-node ./src/server/data/generate-images.js",
-    "update-thumbnails": "babel-node ./src/server/data/update-thumbnails.js",
+    "generate-images": "babel-node ./scripts/generate-images.js",
+    "update-thumbnails": "babel-node ./scripts/update-thumbnails.js",
+    "setup": "sequelize db:migrate && sequelize db:seed:all && yarn generate-images && yarn update-thumbnails",
     "client": "webpack-dev-server --watch --config ./webpack.dev.js",
     "build": "webpack --config ./webpack.prod.js",
     "dev": "concurrently -n SERVER,CLIENT \"yarn server\" \"yarn client\" -c bgBlue.black,bgRed.black -t \"HH:mm:ss\" -k -p \"{time} - {name}\""
