--- a/package.json
+++ b/package.json
@@ -12,9 +12,9 @@
     "client": "webpack-dev-server --watch --config ./webpack.dev.js",
     "dev": "concurrently -n SERVER,CLIENT \"yarn server_dev\" \"yarn client\" -c bgBlue.black,bgRed.black -t \"HH:mm:ss\" -k -p \"{time} - {name}\"",
 
-    "migrate": "sequelize db:migrate",
-    "seeds:undo": "sequelize db:seed:undo:all",
-    "seeds:generate": "sequelize db:seed:all",
+    "migrate": "./node_modules/.bin/sequelize db:migrate",
+    "seeds:undo": "./node_modules/.bin/sequelize db:seed:undo:all",
+    "seeds:generate": "./node_modules/.bin/sequelize db:seed:all",
     "setup": "npm run migrate && npm run seeds:undo && npm run seeds:generate",
     "heroku-postbuild": "./node_modules/.bin/webpack --config ./webpack.prod.js && npm run setup"
   },
