--- a/src/server/config.json
+++ b/src/server/config.json
@@ -10,12 +10,6 @@
   },
   "production": {
     "use_env_variable": "DATABASE_URL",
-    "dialect": "postgres",
-    "pool": {
-      "max": 30,
-      "min": 0,
-      "idle": 20000,
-      "acquire": 20000
-    }
+    "dialect": "postgres"
   }
 }
