--- a/src/server/config.json
+++ b/src/server/config.json
@@ -10,6 +10,12 @@
   },
   "production": {
     "use_env_variable": "DATABASE_URL",
-    "dialect": "postgres"
+    "dialect": "postgres",
+    "pool":{
+      "max": 15,
+      "min": 1,
+      "idle": 200000,
+      "acquire": 200000
+    }
   }
 }
