--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "react-apollo": "^2.1.11",
     "react-dom": "^16.4.2",
     "react-flip-move": "^3.0.3",
+    "react-helmet": "^5.2.0",
     "react-redux": "^6.0.0",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.1",
