--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "cli-progress": "^2.1.1",
     "cors": "^2.8.4",
     "diacritics": "^1.3.0",
+    "escape-string-regexp": "^1.0.5",
     "express": "^4.16.3",
     "express-graphql": "^0.7.1",
     "faker": "^4.1.0",
