--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "scripts": {
     "server_dev": "nodemon --config nodemon.json ./src/server/index.js",
     "server": "./node_modules/.bin/babel-node ./src/server/index.js",
-    "test": "babel-node ./src/server/schemas/index.js",
+    "test": "babel-node ./src/server/test.js",
     "client": "webpack-dev-server --watch --config ./webpack.dev.js",
     "dev": "concurrently -n SERVER,CLIENT \"yarn server_dev\" \"yarn client\" -c bgBlue.black,bgRed.black -t \"HH:mm:ss\" -k -p \"{time} - {name}\"",
     "migrate": "./node_modules/.bin/sequelize db:migrate",
