--- a/.babelrc
+++ b/.babelrc
@@ -3,7 +3,7 @@
         "@babel/preset-env",
         "@babel/preset-react"
     ],
-    plugins: [
+    "plugins": [
       "@babel/plugin-proposal-class-properties",
       "@babel/plugin-proposal-object-rest-spread",
       "@babel/plugin-syntax-dynamic-import",
