--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "delivery-app-v2",
   "version": "0.0.1",
   "main": "index.js",
-  "repository": "C:\\Users\\kittykat\\Desktop\\delivery-app-v2",
+  "repository": "",
   "author": "saraband <super_yass@hotmail.com>",
   "license": "MIT",
   "scripts": {
@@ -54,6 +54,7 @@
     "graphql-tag": "^2.9.2",
     "graphql-tools": "^4.0.3",
     "graphql-type-json": "^0.2.1",
+    "helmet": "^3.15.1",
     "html-webpack-harddisk-plugin": "^1.0.1",
     "html-webpack-plugin": "^3.2.0",
     "lodash": "^4.17.10",
